[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/chivo/chivo.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameplayRelated/GameModeRelated/ModeButtonAssets/ModeBeginner/ModeBeginner_ButtonPic_Normal.png" type="Texture" id=2]
[ext_resource path="res://GameplayRelated/GameModeRelated/ModeButtonAssets/ModeBeginner/ModeBeginner_ButtonPic_Highlighted.png" type="Texture" id=3]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/ModeSelectionPanelV2/Subs/ModeButton/GameModeButton.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="GameModeButton" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeButton" type="TextureButton" parent="."]
margin_right = 150.0
margin_bottom = 94.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="ModeLabel" type="Label" parent="."]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Mode"
align = 1
[connection signal="button_up" from="ModeButton" to="." method="_on_ModeButton_button_up"]
